Add support for parallel RGB interface
- Set clock for LCDIF1 to allow using selecting different clock sources
  but not modify any of these. The podf and pre divider are sufficient
  for getting all necessary clock frequencies. Each of them can have
  a value of 1 to 8, so even complicated dividers like 3*7 = 21 are
  possible.
- Revert two commits on drivers/video/mxsfb.c that do not work
  correctly yet. The first only modifies the display hardware if
  the parameters actually change and the second activates the clock
  at other places to support i.MX67D. However this does not work
  on i.MX6SX. We keep the commit that reads and returns the system time
  when VSYNC actually happened in ioctl MXCFB_WAIT_FOR_VSYNC.

--- a/arch/arm/boot/dts/imx6sx-efusa9x.dts
+++ b/arch/arm/boot/dts/imx6sx-efusa9x.dts
@@ -155,7 +155,6 @@
 			regulator-name = "lcd-3v3";
 			gpio = <&gpio3 19 0>;
 			enable-active-high;
-			status = "disabled";
 		};
 
 		reg_camera_dovdd: camera_dovdd {
@@ -987,22 +986,22 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_lcdif1_1>;	/* Remove when already active */
 	lcd-supply = <&reg_lcd_3v3>;
-//###	status = "okay";
+	status = "okay";
 
 	display0: display {
 		bits-per-pixel = <16>;
-		bus-width = <16>;
+		bus-width = <18>;
 		display-timings {
 			native-mode = <&timing0>;
 			timing0: wvga {
-				clock-frequency = <33500000>;
-				hactive = <800>;
+				clock-frequency = <25000000>;
+				hactive = <640>;
 				vactive = <480>;
-				hfront-porch = <40>;
-				hback-porch = <88>;
-				hsync-len = <128>;
-				vback-porch = <33>;
-				vfront-porch = <10>;
+				hfront-porch = <16>;
+				hback-porch = <134>;
+				hsync-len = <10>;
+				vback-porch = <11>;
+				vfront-porch = <32>;
 				vsync-len = <2>;
 				hsync-active = <0>;
 				vsync-active = <0>;
@@ -1016,6 +1015,7 @@
 &lcdif2 {
         display = <&display1>;
         disp-dev = "ldb";
+	lcd-supply = <&reg_lcd_3v3>;
         status = "okay";
 
         display1: display {
