By default disable power key in imx6ul.dtsi
Not all boards provide a power key. Therefore do not enable the
power key device by default.

--- a/arch/arm/boot/dts/imx6ul.dtsi
+++ b/arch/arm/boot/dts/imx6ul.dtsi
@@ -686,6 +686,7 @@
 				interrupts = <GIC_SPI 4 IRQ_TYPE_LEVEL_HIGH>;
 				fsl,keycode = <116>; /* KEY_POWER */
 				fsl,wakeup;
+				status = "disabled";
 			};
 
 			epit1: epit@020d0000 {
