Rename fsimx6sx and fsimx6ul device trees
To avoid unnecessary complications in the F&S release build system
(fsbuild), rename the device tree files to use the F&S architecture
name instead of the Freescale CPU type name. The following files are
renamed:

  imx6sx-efusa9x.dts -> fsimx6sx-efusa9x.dts
  imx6ul-efusa7ul.dts -> fsimx6ul-efusa7ul.dts

This is also changed in the Makefile in arch/arm/boot/dts.

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -214,8 +214,8 @@ dtb-$(CONFIG_ARCH_MXC) += \
 	imx6sx-sabreauto.dtb \
 	imx6sx-sabreauto-m4.dtb \
 	imx6sx-sdb-lcdif1.dtb \
-	imx6sx-efusa9x.dtb \
-	imx6ul-efusa7ul.dtb \
+	fsimx6sx-efusa9x.dtb \
+	fsimx6ul-efusa7ul.dtb \
 	imx6ul-14x14-lpddr2-arm2.dtb \
 	imx6ul-14x14-ddr3-arm2.dtb \
 	imx6ul-14x14-ddr3-arm2-adc.dtb \
