--- a/arch/arm/boot/dts/fsimx6sx-efusa9x.dts
+++ b/arch/arm/boot/dts/fsimx6sx-efusa9x.dts
@@ -667,19 +667,23 @@
 			label = "0-PWRCTL";
 			default-on;
 			active-high;
+			type = "GPIO";
 		};
 		led@1 {
 			reg = <1>;
 			label = "1-LEDCTRL";
 			default-on;
+			type = "PWM";
 		};
 		led@2 {
 			reg = <2>;
 			label = "2-ROTATE";
+			type = "GPIO";
 		};
 		led@3 {
 			reg = <3>;
 			label = "3-unused";
+			type = "LED";
 		};
 	};
 
